--- a/osint/osint_wic_ctf/index.html
+++ b/osint/osint_wic_ctf/index.html
@@ -11,6 +11,20 @@
   </head>
 
   <body>
+
+    <template id="challenge-template">
+      <p class="uk-article-lead"></p>
+      <p class="uk-article-meta">Difficulty: <span class=""></span></p>
+      <p></p>
+      <div class="uk-form-icon">
+        <i class="uk-icon-flag"></i>
+        <input type="text" class="monospace uk-form-width-large" id="flag-name"></input>
+      </div>
+      <button class="uk-button uk-button-primary" type="button">
+        Check
+      </button>
+    </template>
+
     <div class="uk-flex uk-margin-top uk-margin-bottom">
       <div class="uk-container uk-container-center uk-width-medium-1-2">
         <article class="uk-article uk-float-left">
@@ -29,124 +43,9 @@
             </div>
           </div>
 
-          <hr class="uk-article-divider">
-
-          <form class="uk-form">
-            <h2 class="uk-article-title">Basics</h2>
-
-            <!-- FLAG -->
-            <p class="uk-article-lead">What's this person's name?</p>
-            <p class="uk-article-meta">Difficulty: <span class="uk-text-success">Easy</span></p>
-            <p>
-              Flag should be formatted as <span class="monospace">flag{firstname lastname}</span>, e.g.
-              <span class="monospace">flag{Abraham Lincoln}</span>.
-            </p>
-            <div class="uk-form-icon">
-              <i class="uk-icon-flag"></i>
-              <input type="text" class="monospace uk-form-width-large"></input>
-            </div>
-            <button class="uk-button uk-button-primary" type="submit">
-              Check
-            </button>
-
-            <hr class="uk-article-divider">
-
-            <h2 class="uk-article-title">All the social mediaz</h2>
-
-            <!-- FLAG -->
-            <p class="uk-article-lead">Find their Facebook profile</p>
-            <p class="uk-article-meta">Difficulty: <span class="uk-text-success">Easy</span></p>
-            <p>Flag will be in one of their Facebook posts.</p>
-            <div class="uk-form-icon">
-              <i class="uk-icon-flag"></i>
-              <input type="text" class="monospace uk-form-width-large"></input>
-            </div>
-            <button class="uk-button uk-button-primary" type="submit">
-              Check
-            </button>
-
-            <!-- FLAG -->
-            <p class="uk-article-lead">Find their Twitter profile</p>
-            <p class="uk-article-meta">Difficulty: <span class="uk-text-success">Easy</span></p>
-            <p>Flag will be in their bio.</p>
-            <div class="uk-form-icon">
-              <i class="uk-icon-flag"></i>
-              <input type="text" class="monospace uk-form-width-large"></input>
-            </div>
-            <button class="uk-button uk-button-primary" type="submit">
-              Check
-            </button>
-
-            <!-- FLAG -->
-            <p class="uk-article-lead">Find their Reddit profile</p>
-            <p class="uk-article-meta">Difficulty: <span class="uk-text-success">Easy</span></p>
-            <p>Flag will be in their bio.</p>
-            <div class="uk-form-icon">
-              <i class="uk-icon-flag"></i>
-              <input type="text" class="monospace uk-form-width-large"></input>
-            </div>
-            <button class="uk-button uk-button-primary" type="submit">
-              Check
-            </button>
-
-            <!-- FLAG -->
-            <p class="uk-article-lead">Find their GitHub profile</p>
-            <p class="uk-article-meta">Difficulty: <span class="uk-text-success">Easy</span></p>
-            <p>Flag will be in their bio.</p>
-            <div class="uk-form-icon">
-              <i class="uk-icon-flag"></i>
-              <input type="text" class="monospace uk-form-width-large"></input>
-            </div>
-            <button class="uk-button uk-button-primary" type="submit">
-              Check
-            </button>
-
-            <hr class="uk-article-divider">
-
-            <h2 class="uk-article-title">Personal information</h2>
-
-            <!-- FLAG -->
-            <p class="uk-article-lead">Find their email address</p>
-            <p class="uk-article-meta">Difficulty: <span class="uk-text-warning">Medium</span></p>
-            <p>
-              Flag should be formatted as <span class="monospace">flag{email}</span>, e.g. <span class="monospace">flag{user@example.com}</span>.
-            </p>
-            <div class="uk-form-icon">
-              <i class="uk-icon-flag"></i>
-              <input type="text" class="monospace uk-form-width-large"></input>
-            </div>
-            <button class="uk-button uk-button-primary" type="submit">
-              Check
-            </button>
-
-            <!-- FLAG -->
-            <p class="uk-article-lead">Find their phone number</p>
-            <p>
-              Flag should be formatted as <span class="monospace">flag{XXX-XXX-XXXX}</span>, e.g.
-              <span class="monospace">flag{123-456-7890}</span>.
-            </p>
-            <div class="uk-form-icon">
-              <i class="uk-icon-flag"></i>
-              <input type="text" class="monospace uk-form-width-large"></input>
-            </div>
-            <button class="uk-button uk-button-primary" type="submit">
-              Check
-            </button>
-
-            <!-- FLAG -->
-            <p class="uk-article-lead">Where was this photo taken?</p>
-            <p>
-              This picture was taken from inside a restaurant. The flag should be formatted as <span class="monospace">flag{restaurant}</span>.
-            </p>
-            <div class="uk-form-icon">
-              <i class="uk-icon-flag"></i>
-              <input type="text" class="monospace uk-form-width-large"></input>
-            </div>
-            <button class="uk-button uk-button-primary" type="submit">
-              Check
-            </button>
-
+          <form class="uk-form" id="challenges">
           </form>
+
         </article>
       </div>
     </div>
@@ -155,4 +54,10 @@
   <!-- JavaScript -->
   <script type="application/javascript" src="assets/js/jquery-3.4.1.min.js"></script>
   <script type="application/javascript" src="assets/js/uikit.min.js"></script>
+
+  <!-- Stanford Javascript Crypto Library -->
+  <script type="application/javascript" src="assets/js/sjcl.js"></script>
+
+  <!-- Custom Javascript -->
+  <script type="application/javascript" src="assets/js/script.js"></script>
 </html>
