--- a/osint/osint_wic_ctf/index.html
+++ b/osint/osint_wic_ctf/index.html
@@ -7,7 +7,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/uikit.almost-flat.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/osint.css">
   </head>
 
   <body>
