Make the width of the page expand for smaller screens.

--- a/osint/osint_wic_ctf/index.html
+++ b/osint/osint_wic_ctf/index.html
@@ -37,7 +37,7 @@
     </template>
 
     <div class="uk-flex uk-margin-top uk-margin-bottom">
-      <div class="uk-container uk-container-center uk-width-medium-1-2">
+      <div class="uk-container uk-container-center uk-width-large-1-2">
         <article class="uk-article uk-float-left">
           <div class="uk-container uk-text-center">
             <h1 class="uk-article-title">OSINT CTF</h1>
