Make links to assets absolute.

--- a/osint/osint_wic_ctf/index.html
+++ b/osint/osint_wic_ctf/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/uikit.almost-flat.min.css">
-    <link rel="stylesheet" href="assets/css/osint.css">
+    <link rel="stylesheet" href="/assets/css/uikit.almost-flat.min.css">
+    <link rel="stylesheet" href="/assets/css/osint.css">
   </head>
 
   <body>
@@ -42,7 +42,7 @@
           <div class="uk-container uk-text-center">
             <h1 class="uk-article-title">OSINT CTF</h1>
             <div class="uk-width-1-2 uk-margin-top uk-margin-bottom uk-container-center">
-              <img src="assets/img/tim.jpg" style="image-orientation: from-image;">
+              <img src="/assets/img/tim.jpg" style="image-orientation: from-image;">
             </div>
           </div>
 
@@ -79,13 +79,13 @@
   </body>
 
   <!-- JavaScript -->
-  <script type="application/javascript" src="assets/js/jquery-3.4.1.min.js"></script>
-  <script type="application/javascript" src="assets/js/uikit.min.js"></script>
+  <script type="application/javascript" src="/assets/js/jquery-3.4.1.min.js"></script>
+  <script type="application/javascript" src="/assets/js/uikit.min.js"></script>
 
   <!-- Stanford Javascript Crypto Library -->
-  <script type="application/javascript" src="assets/js/sjcl.js"></script>
+  <script type="application/javascript" src="/assets/js/sjcl.js"></script>
 
   <!-- Custom Javascript -->
-  <script type="application/javascript" src="assets/js/layout.js"></script>
-  <script type="application/javascript" src="assets/js/challenges.js"></script>
+  <script type="application/javascript" src="/assets/js/layout.js"></script>
+  <script type="application/javascript" src="/assets/js/challenges.js"></script>
 </html>
