Change the default background color and font size for the site.

--- a/osint/osint_wic_ctf/index.html
+++ b/osint/osint_wic_ctf/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/assets/css/uikit.almost-flat.min.css">
+    <link rel="stylesheet" href="/assets/css/uikit.min.css">
     <link rel="stylesheet" href="/assets/css/osint.css">
   </head>
 
@@ -24,7 +24,7 @@
         <!-- Text input for the flag. -->
         <div class="uk-form-icon">
           <i class="uk-icon-flag"></i>
-          <input type="text" class="monospace uk-form-width-large" id="flag-name"></input>
+          <input type="text" class="monospace flag-input uk-form-width-large" id="flag-name"></input>
         </div>
 
         <button class="uk-button uk-button-primary" type="button">
