Persist flags through page refreshes by adding a 'flags' cookie to the page.

--- a/osint/osint_wic_ctf/index.html
+++ b/osint/osint_wic_ctf/index.html
@@ -59,6 +59,10 @@
               Give me a hint!
             </button>
 
+            <button class="uk-button uk-button-primary uk-margin-bottom" onclick="reset_flags();">
+              Reset flags
+            </button>
+
             <div class="hint uk-panel uk-panel-box uk-hidden uk-margin-bottom uk-width-1-2 uk-container-center">
               Tim's full name is Timothy Milliren.
             </div>
