Place the flag input field and 'check' button in a UIkit grid so that they appear adjacent to one another even on smaller screends.

--- a/osint/osint_wic_ctf/index.html
+++ b/osint/osint_wic_ctf/index.html
@@ -20,16 +20,18 @@
       <!-- Help text -->
       <p></p>
 
-      <div>
+      <div class="uk-grid">
         <!-- Text input for the flag. -->
-        <div class="uk-form-icon">
+        <div class="uk-form-icon uk-width-3-4">
           <i class="uk-icon-flag"></i>
-          <input type="text" class="monospace flag-input uk-form-width-large" id="flag-name"></input>
+          <input type="text" class="monospace flag-input uk-form-width-large" placeholder="flag{...}" id="flag-name"></input>
         </div>
 
-        <button class="uk-button uk-button-primary" type="button">
-          Check
-        </button>
+        <div class="uk-width-1-4">
+          <button class="uk-button uk-button-primary" type="button">
+            Check
+          </button>
+        </div>
 
         <!-- Use this to tell the user whether or not the flag was correct -->
         <div class="result" data-uk-alert="">
