Some stylistic improvements. Don't wait for the page to load before inserting flags stored in the 'flags' cookie.

--- a/osint/osint_wic_ctf/index.html
+++ b/osint/osint_wic_ctf/index.html
@@ -22,9 +22,11 @@
 
       <div class="uk-grid">
         <!-- Text input for the flag. -->
-        <div class="uk-form-icon uk-width-3-4">
-          <i class="uk-icon-flag"></i>
-          <input type="text" class="monospace flag-input uk-form-width-large" placeholder="flag{...}" id="flag-name"></input>
+        <div class="uk-width-3-4">
+          <div class="uk-form-icon">
+            <i class="uk-icon-flag"></i>
+            <input type="text" class="monospace flag-input uk-form-width-large" placeholder="flag{...}" id="flag-name"></input>
+          </div>
         </div>
 
         <div class="uk-width-1-4">
