Add additional challenges, update layout.

--- a/osint/osint_wic_ctf/index.html
+++ b/osint/osint_wic_ctf/index.html
@@ -23,9 +23,9 @@
       <div class="uk-grid">
         <!-- Text input for the flag. -->
         <div class="uk-width-3-4">
-          <div class="uk-form-icon">
+          <div class="uk-form-icon uk-width-1-1">
             <i class="uk-icon-flag"></i>
-            <input type="text" class="monospace flag-input uk-form-width-large" placeholder="flag{...}" id="flag-name"></input>
+            <input type="text" class="monospace flag-input uk-width-1-1" placeholder="flag{...}" id="flag-name"></input>
           </div>
         </div>
 
