Add link to The OSINT Framework. Update image so that it now includes GPS Exif metadata.

--- a/osint/osint_wic_ctf/index.html
+++ b/osint/osint_wic_ctf/index.html
@@ -77,6 +77,11 @@
             Your goal is to find as much information about Tim as possible.
           </p>
 
+          <p>
+            <b class="uk-bold">Stuck?</b> <a href="https://osintframework.com/">The OSINT framework</a> has a ton
+            of great resources that can help you!
+          </p>
+
           <!-- List of all of the challenges on the site -->
           <form class="uk-form" id="challenges">
           </form>
